# Nagari

./: .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  PROJECT_STRUCTURE.md  README.md  TESTING_BUN.md  TODO.md  algorithms.nag  test_ci.nag  test_simple.js  test_simple.js.map
.github/: ANALYTICS_CONFIG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  MARKETING_TEMPLATES.md  SEO_CONFIG.md  SOCIAL_MEDIA.md  TOPICS.md  copilot-instructions.md  link-check-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.md  config.yml  documentation.md  enhancement.md  feature_request.md  performance.md  question.md  (+1 more)
assets/: docs.css
cli/: Cargo.toml
cli/src/: config.rs  lsp.rs  main.rs  repl.rs  utils.rs
cli/src/commands/: mod.rs
cli/src/package/: cache.rs  lockfile.rs  manager.rs  manifest.rs  mod.rs  registry.rs  resolver.rs  tests.rs  utils.rs
cli/src/repl_engine/: commands.rs  completer.rs  context.rs  editor.rs  engine.rs  evaluator.rs  highlighter.rs  history.rs  mod.rs  session.rs  tests.rs
cli/src/tools/: doc_generator.rs  formatter.rs  linter.rs  mod.rs  package_manager.rs
dev-tools/: QUICK_REFERENCE.md  README.md  config.json  dev-server.bat  dev-server.sh  dev.bat  dev.sh  lint-check.sh  release-prep.sh  setup-dev-env.bat  setup-dev-env.sh  version-bump.sh
docs/: BUN_INTEGRATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  LSP_TROUBLESHOOTING.md  PACKAGING.md  api-reference.md  architecture.md  async-guide.md  bun-guide.md  cli-integration-guide.md  cli-reference.md  complete-ecosystem-implementation.md  development-guide.md  faq.md  getting-started.md  index.md  installation.md  interop-guide.md  language-grammar-upgrade-assessment.md  language-guide.md  lsp-guide.md  nagpkg-design.md  package-manager-repl-implementation.md  packaging-guide.md  phase-4.1-completion.md  phase4-completion.md  release-guide.md  repl-architecture.md  repl-guide.md  troubleshooting.md  tutorials.md
examples/: algorithms.nag  async_demo.nag  browser_apis.nag  crypto_demo.nag  data_analysis.nag  fetch_demo.nag  interop_demo.nag  library_wrappers.nag  math_demo.nag  ml_demo.nag  react_component.nag  react_todo_app.nag  realtime_chat.nag  string_functions_demo_simple.nag
lsp-server/: Cargo.toml
lsp-server/src/: backend.rs  capabilities.rs  code_actions.rs  completion.rs  diagnostics.rs  document.rs  formatting.rs  hover.rs  main.rs  references.rs  symbols.rs
nagari-compiler/: Cargo.toml
nagari-compiler/src/: ast.rs  bytecode.rs  lexer.rs  lib.rs  main.rs  parser.rs  transpiler_old.rs  types.rs
nagari-compiler/src/transpiler/: builtin_map.rs  js_runtime.rs  mod.rs  modules.rs
nagari-embedded/: Cargo.toml
nagari-embedded/src/: c_bindings.rs  lib.rs  nodejs.rs
nagari-parser/: Cargo.toml
nagari-parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  token.rs
nagari-runtime/: README.md  package-lock.json  package.json
nagari-runtime-global/: README.md
nagari-vm/: Cargo.toml
nagari-vm/src/: env.rs  lib.rs  value.rs  vm.rs
nagari-wasm/: Cargo.toml
nagari-wasm/src/: lib.rs  lib_fixed.rs
npm-test/: package.json  test-runtime.js
registry-server/: Cargo.toml
samples/: README.md  hello.nag  simple_test.nag  test_transpiler_todos.nag
scripts/: build.bat  build.sh  package-cross-platform.sh  package-release.bat  package-release.sh  package.sh  release.bat  release.sh  run-tests.bat  seo-setup-simple.sh  seo-setup.bat  seo-setup.sh  test-build.bat  test-build.sh
specs/: bytecode-format.md  grammar.bnf  language-spec.md
src/registry-server/: Cargo.toml
src/registry-server/src/: error.rs  middleware.rs  storage.rs
src/registry-server/src/api/handlers/: docs.rs  search.rs  users.rs
src/registry-server/src/handlers/: health.rs  mod.rs  stats.rs  users.rs
stdlib/: core.nag  fs.nag  http.nag  math.nag
temp/: advanced_fibonacci_test.nag  debug_factorial.nag  debug_for_loop.nag  debug_is_prime.nag  fibonacci_debug_1.nag  fibonacci_debug_10.nag  fibonacci_debug_2.nag  fibonacci_debug_3.nag  fibonacci_debug_4.nag  fibonacci_debug_5.nag  fibonacci_debug_6.nag  fibonacci_debug_7.nag  fibonacci_debug_8.nag  fibonacci_debug_9.nag  fibonacci_fixed.nag  fibonacci_working_fixed.nag  test_addition_issue.nag  test_advanced_types.nag  test_alg_clean.nag  test_algorithms_simple.nag  test_arrays.nag  test_async_simple.nag  test_await.nag  test_bool.nag  test_bool_simple.nag  test_cast.nag  test_comment.nag  test_comments.nag  test_concat.nag  test_conditional.nag  test_dict.nag  test_empty_print.nag  test_exact_is_prime.nag  test_f_string.nag  test_factorial_fibonacci.nag  test_factorial_only.nag  test_fib_partial.nag  test_fib_simple.nag  test_fibonacci.nag  test_for_simple.nag  (+32 more)
test-files/: README.md
test-init/: nagari.toml
test-project/: nagari.toml  simple.nag
test-runtime/: test.js
test-runtime-npm/: TEST_RESULTS.md  comprehensive_test.nag  package-lock.json  package.json  test_advanced.nag  test_npm_runtime.js  test_strings.nag
tests/: README.md  advanced_format_demo.nag  comprehensive_percentage_test.nag  debug_percent.nag  debug_percentage.nag  final_format_test.nag  final_percentage_demo.nag  final_validation.nag  isinstance_debug.nag  isinstance_debug2.nag  isinstance_fstring.nag  isinstance_section.nag  isinstance_simple.nag  minimal_debug.nag  minimal_percentage.nag  simple_comprehensive_test.nag  simple_format_demo.nag  simple_format_test.nag  simple_percent_test.nag  test_basic_functionality.nag  test_build.nag  test_colon.nag  test_control_flow.nag  test_del_only.nag  test_dict.nag  test_dict_patterns.nag  test_enhanced_parser.rs  test_f_simple.nag  test_final.nag  test_format_specifiers.nag  test_math_algorithms.nag  test_percent_simple.nag  test_recent_features.nag  test_recent_features_simple.nag  test_string_operations.nag  test_time_functions.nag  test_tuple_unpacking.nag
tools/: build-wasm.bat  build-wasm.sh  build.bat  build.sh  test-compiler-integration.bat  test-compiler-integration.sh  test-lint-validation.sh  test-linter.sh
web/: README.md  index.html  robots.txt  site.webmanifest  sitemap.xml
(+259 files in other folders)
