[workspace]
resolver = "2"
members = [
    "cli",
    "nagari-compiler",
    "nagari-parser",
    "lsp-server",
    "nagari-vm",
    "nagari-wasm",
    "nagari-embedded",
    "registry-server"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nagari Team"]
license = "MIT"
repository = "https://github.com/nagari-lang/nagari"

[workspace.dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
criterion = "0.5"

[profile.release]
opt-level = "s"
lto = true
