[workspace]
resolver = "2"
members = [
    "src/cli",
    "src/nagari-compiler",
    "src/nagari-parser",
    "src/lsp-server",
    "src/nagari-vm",
    "src/nagari-wasm",
    "src/nagari-embedded",
    "src/registry-server"
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Nagari Team <contact@nagari.dev>"]
license = "MIT"
repository = "https://github.com/ayanalamMOON/Nagari"
homepage = "https://github.com/ayanalamMOON/Nagari"
documentation = "https://github.com/ayanalamMOON/Nagari/docs"
description = "Modern programming language combining Python's elegant syntax with JavaScript's ecosystem compatibility. Rust-based transpiler for web development."
readme = "README.md"
keywords = ["nagari", "compiler", "transpiler", "python", "javascript"]
categories = ["development-tools", "compilers", "web-programming"]
exclude = ["target/", "*.tmp", ".github/workflows/"]

[workspace.dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
criterion = "0.5"

[profile.release]
opt-level = "s"
lto = true
