[package]
name = "nag"
version = "0.3.0"
edition = "2021"
description = "Nagari CLI tool for development, compilation, and ecosystem management"
authors = ["Nagari Team <team@nagari-lang.org>"]
license = "MIT"
repository = "https://github.com/nagari-lang/nagari"
homepage = "https://nagari-lang.org"

[[bin]]
name = "nag"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "2.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.0"
notify = "6.0"
futures = "0.3"
crossterm = "0.27"
reedline = "0.24"
tower-lsp = "0.20"
dashmap = "5.0"
regex = "1.0"
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
similar = "2.0"
lsp-types = "0.94"
dirs = "5.0"
pathdiff = "0.2"
nagari-compiler = { path = "../nagari-compiler" }
nagari-runtime = { path = "../nagari-runtime" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
