[package]
name = "nag"
version = "0.3.0"
edition = "2021"
description = "Nagari CLI tool for development, compilation, and ecosystem management"
authors = ["Nagari Team <team@nagari-lang.org>"]
license = "MIT"
repository = "https://github.com/nagari-lang/nagari"
homepage = "https://nagari-lang.org"

[[bin]]
name = "nag"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "2.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.0"
notify = "6.0"
futures = "0.3"
crossterm = "0.27"
reedline = "0.24"
tower-lsp = "0.20"
dashmap = "5.0"
regex = "1.0"
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
similar = "2.0"
lsp-types = "0.94"
dirs = "5.0"
pathdiff = "0.2"
reqwest = { version = "0.11", features = ["json"] }
url = "2.0"
semver = "1.0"
sha2 = "0.10"
base64 = "0.21"
tar = "0.4"
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
nagari-compiler = { path = "../nagari-compiler" }
nagari-runtime = { path = "../nagari-runtime" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
tokio-test = "0.4"
indexmap = "2.0"
env_logger = "0.10"
log = "0.4"
