[package]
name = "nagari-lsp"
version = "0.1.0"
edition = "2021"
description = "Nagari Language Server Protocol implementation"
authors = ["Nagari Team <team@nagari-lang.org>"]
license = "MIT"

[[bin]]
name = "nagari-lsp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
dashmap = "5.0"
tree-sitter = "0.20"
tree-sitter-highlight = "0.20"
ropey = "1.0"
url = "2.0"
lsp-types = "0.94"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"
walkdir = "2.0"
ignore = "0.4"
fuzzy-matcher = "0.3"
similar = "2.0"

# Nagari-specific dependencies
nagari-compiler = { path = "../nagari-compiler" }
nagari-parser = { path = "../nagari-parser" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[features]
default = []
debug = []
