[package]
name = "nagari-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Nagari Team"]
description = "Compiler for the Nagari programming language"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "nagc"
path = "src/main.rs"
