[package]
name = "nagari-vm"
version = "0.1.0"
edition = "2021"
authors = ["Nagari Team"]
description = "Virtual machine for the Nagari programming language"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "nagrun"
path = "src/main.rs"
