[package]
name = "nagari-wasm"
version = "0.3.0"
edition = "2021"
description = "WebAssembly runtime for the Nagari programming language"
license = "MIT"
repository = "https://github.com/nagari-lang/nagari"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1"
nagari-vm = { path = "../nagari-vm" }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Performance",
  "PerformanceNavigation",
  "PerformanceTiming",
]

[profile.release]
opt-level = "s"
lto = true
