[package]
name = "nagari-registry"
version = "0.1.0"
edition = "2021"
description = "Nagari package registry server"
authors = ["Nagari Team <team@nagari-lang.org>"]
license = "MIT"

[[bin]]
name = "nagari-registry"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
dotenvy = "0.15"
semver = "1.0"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "multipart"] }
toml = "0.8"
async-trait = "0.1"
minio = { version = "0.1", optional = true }
redis = { version = "0.24", features = ["tokio-comp"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
httpmock = "0.7"

[features]
default = []
s3-storage = ["minio"]
redis-cache = ["redis"]
